# malelficus

./: .gitignore  Doxyfile  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.h.in  config.status  configure  configure.ac  file  index.html  libtool  params.json
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
doc/html/: annotated.html  classes.html  copy_8c.html  copy_8c_source.html  defines_8h.html  defines_8h__dep__incl.map  defines_8h__dep__incl.md5  defines_8h__incl.map  defines_8h__incl.md5  defines_8h_source.html  disas_8c.html  disas_8c__incl.map  disas_8c__incl.md5  disas_8c_source.html  disas_8h.html  disas_8h__dep__incl.map  disas_8h__dep__incl.md5  disas_8h__incl.map  disas_8h__incl.md5  disas_8h_source.html  dissect_8c.html  dissect_8c__incl.map  dissect_8c__incl.md5  dissect_8c_source.html  dissect_8h.html  dissect_8h__dep__incl.map  dissect_8h__dep__incl.md5  dissect_8h_source.html  error_8c.html  error_8c__incl.map  error_8c__incl.md5  (+145 more)
samples/: backdoor.asm  bugsec.asm  i4k.asm  i4k.asm~  i4k.c  i4k.hex
scripts/: asm.lua  asm.lua~  conv_str2stack.lua~  hex.lua  hex.lua~  malelficus.lua  malelficus.lua~  str2hex.lua~
src/: #elf_object.h#  Makefile  Makefile.am  Makefile.am~  Makefile.in  c_define2elf_attr.sh  c_define2elf_attr.sh~  copy.c  defines.h  disas.c  disas.h  elf_object.c  elf_object.h  header_types.h~  infect.c  infect.h  machines.h~  main  main.c  main.c~  malelf_object.c  malelf_object.h  malelficus_banner.h  print_table.h  reverse_elf.c  reverse_elf.c~  reverse_elf.h  reverse_elf.h~  section_types.h~  segment_types.h~  test.asm  test_elf.asm  test_elf.c  tmp  tmp~  types.h  util.c  util.h  util.h~
src/libmalelf/: Makefile  Makefile.am  Makefile.am~  Makefile.in  disas.c  disas.c~  disas.lo  dissect.c  dissect.c~  dissect.lo  error.c  error.c~  header_types.inc  infect.c  infect.c~  infect.lo  libmalelf.la  machines.inc  mainpage.h  object.c  object.c~  object.lo  print_table.c  print_table.c~  print_table.lo  reverse_elf.c  reverse_elf.c~  reverse_elf.lo  section_types.inc  segment_flags.inc  segment_types.inc  shellcode.c  shellcode.c~  shellcode.lo  util.c  util.c~
src/libmalelf/.deps/: disas.Plo  dissect.Plo  error.Plo  infect.Plo  object.Plo  print_table.Plo  reverse_elf.Plo  shellcode.Plo  util.Plo
src/libmalelf/.libs/: libmalelf.lai  libmalelf.so.1.0.0
src/libmalelf/include/malelf/: defines.h  disas.h  dissect.h  error.h  error.h~  infect.h  infect.h~  malelf.h  object.h  object.h~  reverse_elf.h  shellcode.h  util.h  util.h~
test/: CUnitAutomated-Listing.xml  CUnitAutomated-Results.xml  Makefile  Makefile.am  Makefile.am~  Makefile.in  binary2source.c  binary2source.objdump  binary2source_elf  binary2source_elf.c  bugsec.asm  cat.c  cat.hex  cat_min.c  copy.c  create_binary.c  elf_xpl.c  hello.c  hello2_generated.c  hello_generated.c  host1.c  host1_rev.c  infected.hex  infection  lua_embedded.c  make_elf.c  malang.c  malcat.hex  malelf_object  min.asm  min.hex  min_generated.asm  min_generated.hex  newlib.c  rm.c  sc.asm  sc.c  test.asm  test_infection-Listing.xml  test_infection-Results.xml  (+9 more)
test/.deps/: test_infection.Po  test_malelf_object.Po
test/.libs/: infection  lt-infection  lt-malelf_object  malelf_object
test/data/: echo1.hexdump  hello.generated.hexdump  hello.original.hexdump
test/host/: Makefile.am  Makefile.am~  Makefile.in  ls  ps  pwd  uninfected.c
test/infected/: bash  cat  cp  echo  echo.out  ls  ls.out  mv  ps  ps.out  pwd  pwd.out  rm  rm.out  uname  uname.out
test/malwares/: Makefile.am~  Makefile.in  list-files.asm~  write_message.asm~
test/test_files/: Makefile  Makefile.am  Makefile.am~  Makefile.in  list-files.asm  malware1.asm  uninfected  uninfected.asm
test/test_files/.deps/: clean.Po
tests/: binary2source  binary2source.c~  binary2source_copy  binary2source_elf.c  create_binary  create_binary.c~  echo  echo.c  hello  hello2  hello_generated  test
(+271 files in other folders)
